run selector, lock, free run, tracking, multi usrs
* Lots of work on the run selector.
* Lock mechanism works.
* Free run works.
* App can now keep tracking in background (and while locked)
* Multiple users on same device is now supported.
* Mission detail view somewhat populated.
* HelperFunctions “class” created, to organize better.

--- a/ios/EpicRunner/EpicRunner/EpicRunner-Info.plist
+++ b/ios/EpicRunner/EpicRunner/EpicRunner-Info.plist
@@ -43,9 +43,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>Herp</string>
-    <key>NSLocationAlwaysUsageDescription</key>
-    <string>Derp</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Herp</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Derp</string>
 </dict>
 </plist>
